--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser": "~8.1.3",
     "@angular/platform-browser-dynamic": "~8.1.3",
     "@angular/router": "~8.1.3",
+    "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
+    "ng-bootstrap": "^1.6.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
