--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@angular/platform-browser-dynamic": "~8.1.3",
     "@angular/router": "~8.1.3",
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
+    "@ngrx/effects": "^11.1.0",
+    "@ngrx/schematics": "^11.1.0",
+    "@ngrx/store": "^11.1.0",
+    "@ngrx/store-devtools": "^11.1.0",
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
